resizing portrait and editing about me blurb. Adding styles to projects header title and fixing line issue with cropped borders on projects and contact elements.

--- a/src/css/_projects.scss
+++ b/src/css/_projects.scss
@@ -6,17 +6,29 @@
     background-image: linear-gradient($med-blue, #bfdedd);
 }
 
+.projects-top {
+    clip-path: polygon(0 0, 100% 100%, 101% 101%, 0 101%);
+    margin: 0 30px 0 30px;
+    padding: 0 0 10vh 0;
+    background:white;
+}
+
+.projects-bottom {
+    clip-path: polygon(0 -1%, 100% -1%, 100% 0, 0 100%);
+    margin: 0vh 30px 0 30px;
+    padding: 10vh 0 10vh 0;
+    background: white;
+}
+
 .projects-page-title {
     background-color: white;
-    padding: 10vh 0 10vh 0;
+    padding: 0 0 10vh 0;
     margin: 0 30px 0 30px;
     h1 {
-        font-family: $header-font;
-        font-size: 4em;
-        margin: 0;
+        @include text-base($header-font, 400, 4em);
+        color: $dark-blue;
+        margin: 0 0 0 10px;
         padding: 0;
-        text-align: center;
-        color: #495057;
     }
 }
 
@@ -105,7 +117,6 @@
         padding-bottom: 10vh;
     }
 }
-
 
 .portfolio {
     img.header-img {
