--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -282,6 +282,10 @@ body {
     .left-col{
         justify-content: flex-start;
         align-items: center;
+        .portrait-container{
+            height: 400px;
+            width: auto;
+        }
     }
     .right-col{
         align-self: stretch;
@@ -300,15 +304,16 @@ body {
         margin: 0;
         h1 {
                 font-size: 3em;
-                padding: 20px 0 40px 0;
+                padding: 20px 0 20px 0;
         }
         .inner {
             padding: 40px 40px 100px 40px;
             .right-col {
                 margin-top: 20px;
             }
-            .left-col img{
+            .left-col .portrait-container{
                 height: 200px;
+                margin-bottom:20px;
             }
         }
     }
@@ -525,7 +530,7 @@ $square-active-grad : linear-gradient(to left, rgba(50,50,50,0.9), rgba(50,50,50
             justify-content: center;
             align-items: center;
             .btn {
-                margin: 10px 5vw 0 5vw;
+                margin: 10px 2vw 0 2vw;
                 padding: 0;
             }
         }
@@ -535,13 +540,14 @@ $square-active-grad : linear-gradient(to left, rgba(50,50,50,0.9), rgba(50,50,50
             text-shadow: 0 0 2px #000;
             border: none;
             transition: color 0.2s, text-shadow 0.2s, ease-in-out 0.2s;
+            font-size: 1.8em;
         }
         a:hover {
             color: #fcda85;
             background-color: transparent;
             text-shadow: 0 0 4px $dark-blue;
             border: none;
-            transform: scale(1.2);
+            transform: scale(1.5);
         }
     }
 }
@@ -606,17 +612,15 @@ $square-active-grad : linear-gradient(to left, rgba(50,50,50,0.9), rgba(50,50,50
     }
 }
 
-
-
 //Contact Box
 .contact-top {
-    clip-path: polygon(0 100%, 100% 0%, 100% 100%, 0% 100%);
+    clip-path: polygon(0 100%, 100% 0%, 101% 101%, 0% 101%);
     margin: 20vh 30px 0 30px;
     padding: 10vh 0 10vh 0;
     background:white;
 }
 .contact-bottom {
-    clip-path: polygon(0 0%, 100% 0%, 100% 0%, 0% 100%);
+    clip-path: polygon(0 -1%, 100% -1%, 100% 0%, 0% 100%);
     margin: 0vh 30px 20vh 30px;
     padding: 10vh 0 10vh 0;
     background: white;
@@ -641,6 +645,9 @@ $square-active-grad : linear-gradient(to left, rgba(50,50,50,0.9), rgba(50,50,50
     }
     .submit-button {
         padding: 12px 36px 12px 36px;
+    }
+    .submit-button:hover{
+        transform: scale(1.5);
     }
     .container{
         max-width:800px;
